# scan_context

./: .gitignore  CMakeLists.txt  README.md
include/scan_context/: database-inl.h  database.h  scan_context-inl.h  scan_context.h
python/: CMakeLists.txt  scan_context_bindings.cpp
python/cmake/: setup.py.in
scan_context/include/scan_context/: database.h  scan_context-inl.h  scan_context.h  types.h
scan_context/src/: database.cpp  scan_context.cpp
tests/: CMakeLists.txt  test_database.cpp  test_scan_context.cpp
